# xcripto

./: .env.vps.example  .gitignore  Caddyfile  README.md  docker-compose.vps.yml  render.yaml
backend/: .env.example  .env.local.production.example  .env.production.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/docs/: API_AUTH_RBAC_CONTRACT.md  API_ERROR_CONTRACT.md  DEPLOYMENT_CHECKLIST.md  FRONTEND_ADMIN_API_CONTRACT.md  FRONTEND_ADMIN_INTEGRATION_GUIDE.md  LOCAL_DOCKER_POSTGRES_E2E_REPORT.md  LOCAL_RC_v0.1.0-rc1_REPORT.md  LOCAL_RELEASE_CANDIDATE_REPORT.md  OPERATIONAL_RUNBOOK.md  PROFESSIONAL_NEWSROOM_QA.md  RELEASE_NOTES_v0.1.0-rc1.md  SOURCE_QUALITY_POLICY.md  openapi.json
backend/scripts/: admin_contract_smoke.py  controlled_newsroom_pilot.py  create_admin.py  export_openapi.py  local_newsroom_qa.py  run_connector.py  smoke_test.py
backend/tests/: conftest.py  test_admin_dashboard.py  test_agent_executions.py  test_agent_outputs.py  test_agent_runner.py  test_alembic.py  test_audit_checks.py  test_auth.py  test_auth_sessions.py  test_binance_square_publication_dispatch.py  test_connector_rollout.py  test_editorial_core.py  test_editorial_gates.py  test_editorial_readiness.py  test_external_connectors.py  test_frontend_admin_contract.py  test_health.py  test_intake.py  test_metrics_memory_knowledge.py  test_news.py  test_operational_audit.py  test_operational_audit_coverage.py  test_production_hardening.py  test_public_news.py  test_rbac_users_ownership.py  (+10 more)
(+383 files in other folders)
